--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "moment": "^2.12.0",
+    "playmusic": "git+https://github.com/jamon/playmusic.git",
+    "request": "^2.71.0"
+  }
 }
